third_party/move/move-compiler-v2/tests/lambda/inline-parity/spec_inlining.lambda.exp
// -- Model dump before bytecode pipeline
module 0x42::Test {
    private fun apply(v: u64,predicate: |u64|bool): bool {
        spec {
          assert Ge($t0, 0);
        }
        ;
        (predicate)(v)
    }
    public fun test_apply(x: u64) {
        {
          let r1: bool = Test::apply(x, closure#0Test::test_apply$lambda$1());
          spec {
            assert r1;
          }
          ;
          if r1 {
            Tuple()
          } else {
            Abort(1)
          };
          {
            let r2: bool = Test::apply(x, closure#0Test::test_apply$lambda$2());
            spec {
              assert r2;
            }
            ;
            if r2 {
              Tuple()
            } else {
              Abort(2)
            };
            Tuple()
          }
        }
    }
    private fun test_apply$lambda$1(v: u64): bool {
        Ge<u64>(v, 0)
    }
    private fun test_apply$lambda$2(v: u64): bool {
        Neq<u64>(v, 0)
    }
} // end 0x42::Test

// -- Sourcified model before bytecode pipeline
module 0x42::Test {
    fun apply(v: u64, predicate: |u64|bool): bool {

        /* spec {
          assert Ge($t0, 0);
        }
         */
        ;
        predicate(v)
    }
    public fun test_apply(x: u64) {
        let r1 = apply(x, |arg0| test_apply$lambda$1(arg0));

        /* spec {
          assert r1;
        }
         */
        ;
        if (r1) () else abort 1;
        let r2 = apply(x, |arg0| test_apply$lambda$2(arg0));

        /* spec {
          assert r2;
        }
         */
        ;
        if (r2) () else abort 2;
    }
    fun test_apply$lambda$1(v: u64): bool {
        v >= 0
    }
    fun test_apply$lambda$2(v: u64): bool {
        v != 0
    }
}


Diagnostics:
error: Calls to function values other than inline function parameters not yet implemented
  ┌─ tests/lambda/inline-parity/spec_inlining.move:6:9
  │
6 │         predicate(v)
  │         ^^^^^^^^^^^^

error: Function-typed values not yet implemented except as parameters to calls to inline functions
   ┌─ tests/lambda/inline-parity/spec_inlining.move:10:27
   │
10 │         let r1 = apply(x, |v| v >= 0);
   │                           ^^^^^^^^^^

error: Function-typed values not yet implemented except as parameters to calls to inline functions
   ┌─ tests/lambda/inline-parity/spec_inlining.move:16:27
   │
16 │         let r2 = apply(x, |v| v != 0);
   │                           ^^^^^^^^^^
